--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@vitejs/plugin-react-refresh": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.3.0",
     "vite": "^2.3.8"
   }
 }
