--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.0",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.3.0",
-    "vite": "^2.3.8"
+    "require": "^2.4.20",
+    "vite": "^2.3.8",
+    "webpack": "^5.73.0"
   }
 }
