--- a/backup/package.json
+++ b/backup/package.json
@@ -10,6 +10,7 @@
     "@firebase/firestore": "^3.4.12",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "@vitejs/plugin-react-refresh": "^1.3.0",
     "body-parser": "^1.20.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -29,8 +30,7 @@
     "react-router-dom": "^6.3.0",
     "require": "^2.4.20",
     "twilio": "^3.78.0",
-    "vite": "^3.0.4",
-    "webpack": "^5.73.0",
-    "@vitejs/plugin-react": "^2.0.0"
+    "vite": "^2.3.8",
+    "webpack": "^5.73.0"
   }
 }
