--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "easybase-react": "^2.2.13",
     "express": "^4.18.1",
     "express-pino-logger": "^7.0.0",
@@ -28,6 +29,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "require": "^2.4.20",
     "twilio": "^3.78.0",
     "vite": "^2.3.8",
