--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@firebase/firestore": "^3.4.12",
+    "@mui/material": "^5.10.4",
+    "@mui/styled-engine-sc": "^5.10.3",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react": "^2.0.0",
@@ -32,6 +36,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "require": "^2.4.20",
+    "styled-components": "^5.3.5",
     "twilio": "^3.81.0",
     "vite": "^3.0.4",
     "webpack": "^5.73.0"
