--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "require": "^2.4.20",
     "styled-components": "^5.3.5",
     "twilio": "^3.81.0",
+    "uuid": "^9.0.0",
     "vite": "^3.0.4",
     "webpack": "^5.73.0"
   }
