--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build",
     "serve": "vite preview"
   },
+  "proxy": "http://localhost:5173",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -35,6 +36,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.4.0",
     "require": "^2.4.20",
     "styled-components": "^5.3.5",
     "twilio": "^3.81.0",
