--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "@vitejs/plugin-react": "^2.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "cron": "^2.1.0",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
+    "dotenv-safe": "^8.2.0",
     "easybase-react": "^2.2.13",
     "express": "^4.18.1",
     "express-pino-logger": "^7.0.0",
     "firebase": "^9.9.0",
+    "firebase-admin": "^11.0.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
+    "moment-timezone": "^0.5.37",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "react": "^17.0.2",
