--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,7 @@
   ],
   "engines": {
     "node": ">=8.x",
-    "npm": ">=16.x.x"
+    "npm": ">=16.x"
   },
   "dependencies": {
     "@firebase/app": "^0.7.31",
