--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,6 @@
     "test": "eslint . && mocha test",
     "dev": "nodemon ."
   },
-  
   "description": "Node implementation of Appointment Reminders",
   "author": {
     "name": "Twilio",
@@ -40,6 +39,7 @@
     "body-parser": "^1.19.0",
     "configure-env": "^1.0.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "cron": "^1.1.0",
     "debug": ">=2.6.9",
     "dotenv-safe": "^4.0.4",
